force-app/main/default/objects/Grid_Config__mdt/Grid_Config__mdt.object-meta.xml
<CustomObject>
    <label>Grid Config</label>
    <pluralLabel>Grid Configs</pluralLabel>
</CustomObject>