force-app/main/default/objects/Grid_Config__mdt/fields/default_sort_direction__c.field-meta.xml
<CustomField>
    <fullName>default_sort_direction__c</fullName>
    <label>default-sort-direction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>