force-app/main/default/objects/Grid_Config__mdt/fields/enable_infinite_loading__c.field-meta.xml
<CustomField>
    <fullName>enable_infinite_loading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enable-infinite-loading</label>
    <type>Checkbox</type>
</CustomField>