force-app/main/default/objects/Grid_Config__mdt/fields/hide_checkbox_column__c.field-meta.xml
<CustomField>
    <fullName>hide_checkbox_column__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hide-checkbox-column</label>
    <type>Checkbox</type>
</CustomField>