force-app/main/default/objects/Grid_Config__mdt/fields/hide_table_header__c.field-meta.xml
<CustomField>
    <fullName>hide_table_header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hide-table-header</label>
    <type>Checkbox</type>
</CustomField>