force-app/main/default/objects/Grid_Config__mdt/fields/Key_Field__c.field-meta.xml
<CustomField>
    <fullName>Key_Field__c</fullName>
    <defaultValue>&quot;id&quot;</defaultValue>
    <label>Key Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>