force-app/main/default/objects/Grid_Config__mdt/fields/load_more_offset__c.field-meta.xml
<CustomField>
    <fullName>load_more_offset__c</fullName>
    <defaultValue>20</defaultValue>
    <label>load-more-offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>