force-app/main/default/objects/Grid_Config__mdt/fields/max_column_width__c.field-meta.xml
<CustomField>
    <fullName>max_column_width__c</fullName>
    <defaultValue>&#39;1000px&#39;</defaultValue>
    <label>max-column-width</label>
    <length>20</length>
    <type>Text</type>
</CustomField>