force-app/main/default/objects/Grid_Config__mdt/fields/max_row_selection__c.field-meta.xml
<CustomField>
    <fullName>max_row_selection__c</fullName>
    <label>max-row-selection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>