force-app/main/default/objects/Grid_Config__mdt/fields/min_column_width__c.field-meta.xml
<CustomField>
    <fullName>min_column_width__c</fullName>
    <defaultValue>&#39;50px&#39;</defaultValue>
    <label>min-column-width</label>
    <length>20</length>
    <type>Text</type>
</CustomField>