force-app/main/default/objects/Grid_Config__mdt/fields/resize_column_disabled__c.field-meta.xml
<CustomField>
    <fullName>resize_column_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>resize-column-disabled</label>
    <type>Checkbox</type>
</CustomField>