force-app/main/default/objects/Grid_Config__mdt/fields/resize_step__c.field-meta.xml
<CustomField>
    <fullName>resize_step__c</fullName>
    <defaultValue>&#39;10px&#39;</defaultValue>
    <label>resize-step</label>
    <length>20</length>
    <type>Text</type>
</CustomField>