force-app/main/default/objects/Grid_Config__mdt/fields/row_number_offset__c.field-meta.xml
<CustomField>
    <fullName>row_number_offset__c</fullName>
    <label>row-number-offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>