force-app/main/default/objects/Grid_Config__mdt/fields/show_row_number_column__c.field-meta.xml
<CustomField>
    <fullName>show_row_number_column__c</fullName>
    <defaultValue>false</defaultValue>
    <label>show-row-number-column</label>
    <type>Checkbox</type>
</CustomField>