force-app/main/default/objects/Grid_Config__mdt/fields/sorted_by__c.field-meta.xml
<CustomField>
    <fullName>sorted_by__c</fullName>
    <label>sorted-by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>