force-app/main/default/objects/Grid_Config__mdt/fields/sorted_direction__c.field-meta.xml
<CustomField>
    <fullName>sorted_direction__c</fullName>
    <label>sorted-direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>asc</fullName>
                <default>true</default>
                <label>asc</label>
            </value>
            <value>
                <fullName>desc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>