force-app/main/default/objects/Grid_Config__mdt/fields/suppress_bottom_bar__c.field-meta.xml
<CustomField>
    <fullName>suppress_bottom_bar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>suppress-bottom-bar</label>
    <type>Checkbox</type>
</CustomField>