force-app/main/default/objects/Grid_Config__mdt/fields/wrap_text_max_lines__c.field-meta.xml
<CustomField>
    <fullName>wrap_text_max_lines__c</fullName>
    <label>wrap-text-max-lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>